--- a/plop-templates/component/Story.stories.tsx.hbs
+++ b/plop-templates/component/Story.stories.tsx.hbs
@@ -1,5 +1,5 @@
 import type { Meta, StoryObj } from '@storybook/react';
-import {{pascalCase name}} from '@/components/{{pascalCase name}}';
+import { {{pascalCase name}} } from './{{pascalCase name}}';
 import { KumaRegistry } from '@kuma-ui/next-plugin/registry';
 
 const meta = {
