--- a/plop-templates/component/Component.tsx.hbs
+++ b/plop-templates/component/Component.tsx.hbs
@@ -2,7 +2,7 @@ import { Box } from '@kuma-ui/core';
 
 type Props = {};
 
-export const {{pascalCase name}}: FC= (props: Props) => {
+export const {{pascalCase name}} = (props: Props) => {
   return (
     <Box>{{pascalCase name}}</Box>
   );
