--- a/plop-templates/component/Docs.mdx.hbs
+++ b/plop-templates/component/Docs.mdx.hbs
@@ -1,11 +1,11 @@
-import { Meta, Default, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary, Controls, Story } from '@storybook/blocks';
 import * as {{pascalCase name}}Stories from './{{pascalCase name}}.stories';
 
 <Meta of={ {{pascalCase name}}Stories } />
 
 # {{pascalCase name}}
 
-<Default/>
+<Primary />
 
 ## Props
 
