--- a/plop-templates/component/Story.stories.tsx.hbs
+++ b/plop-templates/component/Story.stories.tsx.hbs
@@ -1,6 +1,5 @@
 import type { Meta, StoryObj } from '@storybook/react';
 import { {{pascalCase name}} } from './{{pascalCase name}}';
-import { KumaRegistry } from '@kuma-ui/next-plugin/registry';
 
 const meta = {
   title: '{{pascalCase name}}',
@@ -15,6 +14,6 @@ const meta = {
 export default meta;
 type Story = StoryObj<typeof meta>;
 
-export const Default: Story = {
+export const Primary: Story = {
   render: (args) => <{{pascalCase name}} {...args} />,
 };
